<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/insert_transport_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtIdTransport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/edit_text_bg"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:scrollHorizontally="true"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_pallet_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtIdTransport" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBase5"
        style="@style/button_selected"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/base_5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBase6"
        style="@style/button_selected"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/base_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/btnBase52"-->
    <!--        style="@style/button_selected"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="150dp"-->
    <!--        android:layout_marginStart="45dp"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:text="@string/base_5.2"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnBase5" />-->

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/btnBase62"-->
    <!--        style="@style/button_selected"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="150dp"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:layout_marginEnd="45dp"-->
    <!--        android:text="@string/base_6.2"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnBase6" />-->

    <!--    <androidx.appcompat.widget.AppCompatButton-->
    <!--        android:id="@+id/btnNextMenu"-->
    <!--        android:text="@string/next"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edtRut"-->
    <!--        style="@style/button"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>